--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     </div>
 
     <div class="tool-section">
-      <a href="https://easyusehub.blogspot.com/p/free-pdf-tools-easyusehub.html?m=1" class="btn">Go to EasyUseHub Landing Page</a>
-      <a href="https://easyusehub.blogspot.com/" class="btn">Visit EasyUseHub Home</a>
+      <a href="https://easyusehub.blogspot.com/p/free-pdf-tools-easyusehub.html?m=1" class="btn">PDF TOOL HOME</a>
+      <a href="https://easyusehub.blogspot.com/" class="btn">Easyusehub Home</a>
     </div>
   </div>
 
