--- a/pdf-split.html
+++ b/pdf-split.html
@@ -1,67 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PDF Split Tool | EasyUseHub</title>
-<meta name="description" content="Split PDF files into individual pages online. Free and secure PDF Split tool by EasyUseHub.">
-<style>
-body{font-family:Arial;background:#f4f6f8;margin:0}
-.box{max-width:700px;margin:30px auto;background:#fff;padding:20px;border-radius:6px}
-h1{text-align:center}
-button{padding:10px 20px;background:#2563eb;color:#fff;border:0;border-radius:5px;cursor:pointer}
-a{display:block;margin:8px 0;color:#2563eb;font-weight:bold}
-</style>
+  <meta charset="UTF-8">
+  <title>Split PDF Online – Free PDF Split Tool | EasyUseHub</title>
+  <meta name="description" content="Split PDF files online for free up to 15 MB. EasyUseHub PDF Split tool works directly in your browser. No upload, no signup required.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f9f9f9;
+      padding: 20px;
+      text-align: center;
+    }
+    .tool-box {
+      background: #fff;
+      padding: 25px;
+      max-width: 500px;
+      margin: auto;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    h1 {
+      margin-bottom: 10px;
+    }
+    input[type="file"] {
+      margin: 15px 0;
+    }
+    button {
+      padding: 10px 25px;
+      background: #007bff;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button:disabled {
+      background: #aaa;
+      cursor: not-allowed;
+    }
+    .warning {
+      color: red;
+      font-weight: bold;
+      display: none;
+      margin-top: 10px;
+    }
+    .note {
+      font-size: 14px;
+      color: #555;
+      margin-top: 15px;
+    }
+    .seo {
+      margin-top: 40px;
+      text-align: left;
+    }
+  </style>
 </head>
+
 <body>
 
-<div class="box">
-<h1>PDF Split Tool</h1>
+  <div class="tool-box">
+    <h1>Split PDF Online</h1>
+    <p>Select a PDF file to split. Maximum allowed size: <b>15 MB</b></p>
 
-<input type="file" id="file" accept="application/pdf">
-<br><br>
-<button onclick="splitPDF()">Split PDF</button>
+    <input type="file" id="pdfFile" accept="application/pdf">
 
-<div id="output"></div>
+    <p id="fileWarning" class="warning">
+      ⚠️ File size too large! Please upload a PDF under 15 MB.
+    </p>
 
-<br>
-<a href="https://easyusehub.blogspot.com/p/free-pdf-tools-easyusehub.html?m=1">← Back to PDF Tools</a>
-</div>
+    <br>
+    <button id="splitBtn" disabled>Split PDF</button>
 
-<script src="https://unpkg.com/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
+    <p class="note">
+      📌 This tool works directly in your browser.  
+      Large files may not work properly on mobile devices.
+    </p>
+  </div>
 
-<script>
-async function splitPDF(){
-  const fileInput = document.getElementById('file');
-  const output = document.getElementById('output');
-  output.innerHTML = '';
+  <!-- SEO CONTENT -->
+  <div class="seo">
+    <h2>How to Use PDF Split Tool</h2>
+    <p>Upload your PDF file (up to 15 MB) and split pages easily using EasyUseHub's free PDF Split tool.</p>
 
-  if(!fileInput.files.length){
-    alert("Please select a PDF");
-    return;
-  }
+    <h2>Why Use EasyUseHub PDF Splitter?</h2>
+    <ul>
+      <li>100% free to use</li>
+      <li>No file upload to server</li>
+      <li>Fast and secure</li>
+      <li>Works on mobile and desktop</li>
+    </ul>
+  </div>
 
-  const file = fileInput.files[0];
-  const bytes = await file.arrayBuffer();
-  const pdfDoc = await PDFLib.PDFDocument.load(bytes);
+  <script>
+    const fileInput = document.getElementById("pdfFile");
+    const warning = document.getElementById("fileWarning");
+    const splitBtn = document.getElementById("splitBtn");
 
-  for(let i=0;i<pdfDoc.getPageCount();i++){
-    const newPdf = await PDFLib.PDFDocument.create();
-    const [page] = await newPdf.copyPages(pdfDoc,[i]);
-    newPdf.addPage(page);
+    const MAX_SIZE = 15 * 1024 * 1024; // 15 MB
 
-    const pdfBytes = await newPdf.save();
-    const blob = new Blob([pdfBytes],{type:'application/pdf'});
-    const url = URL.createObjectURL(blob);
+    fileInput.addEventListener("change", function () {
+      const file = this.files[0];
 
-    const link = document.createElement('a');
-    link.href = url;
-    link.download = `page-${i+1}.pdf`;
-    link.textContent = `Download Page ${i+1}`;
-    output.appendChild(link);
-  }
-}
-</script>
+      if (!file) {
+        splitBtn.disabled = true;
+        warning.style.display = "none";
+        return;
+      }
+
+      if (file.size > MAX_SIZE) {
+        warning.style.display = "block";
+        splitBtn.disabled = true;
+        this.value = "";
+      } else {
+        warning.style.display = "none";
+        splitBtn.disabled = false;
+      }
+    });
+
+    // Placeholder (actual split logic can be added later)
+    splitBtn.addEventListener("click", function () {
+      alert("PDF split feature will process the file here.");
+    });
+  </script>
 
 </body>
 </html>
