--- a/index.html
+++ b/index.html
@@ -6,34 +6,39 @@
 <meta name="description" content="Split PDF into individual pages automatically. Each page gets its own download button. Free tool by EasyUseHub. Max 15 MB.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
+
 <style>
 body{font-family:Arial;background:#f4f4f4;margin:0;padding:0;text-align:center}
 nav{background:#222;padding:10px 15px;text-align:center}
-nav a{color:#fff;text-decoration:none;font-weight:bold;margin:0 10px}
-.box{background:#fff;padding:20px;max-width:500px;margin:20px auto;border-radius:8px;text-align:center}
-button{padding:10px 20px;background:#007bff;color:#fff;border:none;border-radius:5px;cursor:pointer;margin:5px;}
+nav a{color:#fff;text-decoration:none;font-weight:bold;margin:0 10px;font-size:18px}
+.box{background:#fff;padding:20px;max-width:600px;margin:20px auto;border-radius:8px;text-align:center;box-shadow:0 0 10px rgba(0,0,0,0.1)}
+button{padding:12px 25px;background:#007bff;color:#fff;border:none;border-radius:5px;cursor:pointer;margin:10px;font-size:16px}
 button:disabled{background:#aaa}
 .warning{color:red;font-weight:bold;display:none;margin:10px 0}
 .note{font-size:14px;color:#555;margin-top:15px}
 .page-buttons{margin-top:20px;text-align:center}
-.page-buttons a{display:block;margin:5px;color:#007bff;text-decoration:none;font-weight:bold}
+.page-buttons a{display:block;margin:5px;color:#007bff;text-decoration:none;font-weight:bold;font-size:16px}
+.bottom-buttons{margin-top:30px}
+.bottom-buttons a{display:inline-block;padding:15px 25px;background:#28a745;color:#fff;text-decoration:none;font-weight:bold;margin:5px;border-radius:6px;font-size:18px}
+.bottom-buttons a:hover{background:#218838}
 </style>
 </head>
 <body>
 
 <!-- Navigation -->
 <nav>
-  <a href="https://easyusehub.blogspot.com/">Home</a>
-  <a href="https://easyusehub.blogspot.com/p/free-pdf-tools-easyusehub.html">All PDF Tools</a>
+  PDF Auto Split Tool – EasyUseHub
 </nav>
 
 <div class="box">
-<h1>PDF Auto Split Tool</h1>
-<p>Upload PDF (Max 15 MB) and get each page download button automatically</p>
+<h1>PDF Auto Split</h1>
+<p>Upload PDF (Max 15 MB) and click <b>Split PDF</b> to automatically create download buttons for each page.</p>
 
 <input type="file" id="pdfFile" accept="application/pdf"><br><br>
 
 <p class="warning" id="warn">⚠️ File must be under 15 MB</p>
+
+<button id="splitBtn" disabled>Split PDF</button>
 
 <div class="page-buttons" id="pageButtons"></div>
 
@@ -42,10 +47,16 @@ button:disabled{background:#aaa}
 </p>
 </div>
 
+<!-- Bottom Buttons -->
+<div class="bottom-buttons">
+<a href="https://easyusehub.blogspot.com/">Home</a>
+<a href="https://easyusehub.blogspot.com/p/free-pdf-tools-easyusehub.html">All PDF Tools</a>
+</div>
+
 <!-- SEO Content -->
-<div class="seo" style="max-width:500px;margin:auto;text-align:left">
-<h2>How to Use PDF Split Tool</h2>
-<p>Upload your PDF file (up to 15 MB) and split pages automatically using EasyUseHub's free PDF Split tool.</p>
+<div class="seo" style="max-width:600px;margin:auto;text-align:left">
+<h2>How to Use PDF Auto Split Tool</h2>
+<p>Upload your PDF file (up to 15 MB) and click the <b>Split PDF</b> button. Each page will get an individual download button automatically.</p>
 
 <h2>Why Use EasyUseHub PDF Splitter?</h2>
 <ul>
@@ -56,37 +67,34 @@ button:disabled{background:#aaa}
 </ul>
 </div>
 
-<!-- Footer -->
-<footer style="margin-top:40px;text-align:center;font-size:14px">
-<p>
-© EasyUseHub | 
-<a href="https://easyusehub.blogspot.com/">Home</a> | 
-<a href="https://easyusehub.blogspot.com/p/free-pdf-tools-easyusehub.html">All PDF Tools</a>
-</p>
-</footer>
-
 <script>
 const fileInput=document.getElementById("pdfFile");
+const splitBtn=document.getElementById("splitBtn");
 const warn=document.getElementById("warn");
 const MAX=15*1024*1024;
 const pageButtons=document.getElementById("pageButtons");
 
-fileInput.addEventListener("change",async ()=>{
-  pageButtons.innerHTML=""; // clear old buttons
+fileInput.addEventListener("change",()=>{
+  pageButtons.innerHTML="";
   const f=fileInput.files[0];
-  if(!f) return;
+  if(!f){splitBtn.disabled=true;return;}
   if(f.size>MAX){
     warn.style.display="block";
+    splitBtn.disabled=true;
     fileInput.value="";
-    return;
   }else{
     warn.style.display="none";
+    splitBtn.disabled=false;
   }
+});
 
-  // Load PDF
-  const bytes=await f.arrayBuffer();
-  const pdf=await PDFLib.PDFDocument.load(bytes);
-  const totalPages=pdf.getPageCount();
+splitBtn.addEventListener("click", async ()=>{
+  pageButtons.innerHTML=""; // clear old
+  const f=fileInput.files[0];
+  if(!f) return;
+  const bytes = await f.arrayBuffer();
+  const pdf = await PDFLib.PDFDocument.load(bytes);
+  const totalPages = pdf.getPageCount();
 
   for(let i=0;i<totalPages;i++){
     const newPdf=await PDFLib.PDFDocument.create();
