--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>PDF Auto Split – EasyUseHub</title>
+<title>PDF Split Free– EasyUseHub</title>
 <meta name="description" content="Split PDF into individual pages automatically. Each page gets its own download button. Free tool by EasyUseHub. Max 15 MB.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
