--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@ button:disabled{background:#aaa}
 
 <!-- Navigation -->
 <nav>
-  PDF Auto Split Tool – EasyUseHub
+  PDF Split Tool – EasyUseHub
 </nav>
 
 <div class="box">
-<h1>PDF Auto Split</h1>
+<h1>PDF Split</h1>
 <p>Upload PDF (Max 15 MB) and click <b>Split PDF</b> to automatically create download buttons for each page.</p>
 
 <input type="file" id="pdfFile" accept="application/pdf"><br><br>
@@ -55,7 +55,7 @@ button:disabled{background:#aaa}
 
 <!-- SEO Content -->
 <div class="seo" style="max-width:600px;margin:auto;text-align:left">
-<h2>How to Use PDF Auto Split Tool</h2>
+<h2>How to Use PDF Split Tool</h2>
 <p>Upload your PDF file (up to 15 MB) and click the <b>Split PDF</b> button. Each page will get an individual download button automatically.</p>
 
 <h2>Why Use EasyUseHub PDF Splitter?</h2>
